force-app/main/default/objects/SIGHTS_CAMERA_VADP_MNG__x/SIGHTS_CAMERA_VADP_MNG__x.object-meta.xml
<CustomObject>
    <description>SIGHTS_CAMERA_VADP_MNG</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>SIGHTS_CAMERA_VADP_MNG</externalName>
    <label>SightsカメラVADP情報</label>
</CustomObject>