force-app/main/default/objects/SIGHTS_CAMERA_VADP_MNG__x/fields/install_date__c.field-meta.xml
<CustomField>
    <fullName>install_date__c</fullName>
    <description>install_date</description>
    <externalDeveloperName>install_date</externalDeveloperName>
    <label>install_date</label>
    <type>DateTime</type>
</CustomField>