force-app/main/default/objects/SIGHTS_CAMERA_VADP_MNG__x/fields/install_mng_no__c.field-meta.xml
<CustomField>
    <fullName>install_mng_no__c</fullName>
    <description>install_mng_no</description>
    <externalDeveloperName>install_mng_no</externalDeveloperName>
    <label>install_mng_no</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>