force-app/main/default/objects/SIGHTS_CAMERA_VADP_MNG__x/fields/sights_camera_vadp_mng_id__c.field-meta.xml
<CustomField>
    <fullName>sights_camera_vadp_mng_id__c</fullName>
    <description>sights_camera_vadp_mng_id</description>
    <externalDeveloperName>sights_camera_vadp_mng_id</externalDeveloperName>
    <label>sights_camera_vadp_mng_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>