force-app/main/default/objects/SIGHTS_CAMERA_VADP_MNG__x/fields/vadp_module_name__c.field-meta.xml
<CustomField>
    <fullName>vadp_module_name__c</fullName>
    <description>vadp_module_name</description>
    <externalDeveloperName>vadp_module_name</externalDeveloperName>
    <label>vadp_module_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>